<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        />

    <item
        android:id="@+id/cursosFragment"
        android:title="@string/cursos"
        android:icon="@drawable/ic_baseline_collections_bookmark_24"
        />
    <item
        android:id="@+id/canalesFragment"
        android:title="@string/canales"
        android:icon="@drawable/ic_baseline_live_tv_24"
        />

    <item
        android:id="@+id/profileFragment"
        android:title="Perfil"
        android:icon="@drawable/ic_baseline_person_pin_24"
        />



</menu>